--- a/.github/workflows/plugins.yml
+++ b/.github/workflows/plugins.yml
@@ -30,16 +30,16 @@ jobs:
     env:
       PLUGINS: aerospike
       SERVICES: aerospike
-      AEROSPIKE_VERSION_RANGE: '5.0.0 - 5.7.0'
+      AEROSPIKE_VERSION_RANGE: '3'
     steps:
       - uses: actions/checkout@v2
       - uses: ./.github/actions/testagent/start
       - uses: ./.github/actions/node/setup
       - run: yarn install --ignore-engines
-      # - uses: ./.github/actions/node/14
-      # - run: yarn test:plugins:ci
-      - uses: ./.github/actions/node/oldest
+      - uses: ./.github/actions/node/14
       - run: yarn test:plugins:ci
+      # - uses: ./.github/actions/node/oldest
+      # - run: yarn test:plugins:ci
       # - uses: ./.github/actions/node/20
       # - run: yarn test:plugins:ci
       - if: always()
