--- a/.github/workflows/plugins.yml
+++ b/.github/workflows/plugins.yml
@@ -48,6 +48,7 @@ jobs:
         with:
           cache: yarn
           node-version: '14'
+          with-yarn: true
       - run: yarn install --ignore-engines
       - run: yarn services
       - run: yarn test:plugins
