--- a/.github/workflows/plugins.yml
+++ b/.github/workflows/plugins.yml
@@ -21,37 +21,29 @@ env:
 
 jobs:
   aerospike-3:
-    runs-on: ubuntu-latest
-    container: didstopia/base:nodejs-14-ubuntu-20.04
+    runs-on: ubuntu-20.04
     services:
       aerospike:
         image: aerospike:ce-6.4.0.3
         ports: 
           - "127.0.0.1:3000-3002:3000-3002"
-      testagent:
-        image: ghcr.io/datadog/dd-apm-test-agent/ddapm-test-agent:latest
-        env:
-          LOG_LEVEL: DEBUG
-          TRACE_LANGUAGE: javascript
-          DISABLED_CHECKS: trace_content_length
-          PORT: 9126
-        ports:
-          - 9126:9126
     env:
       PLUGINS: aerospike
       SERVICES: aerospike
       AEROSPIKE_VERSION_RANGE: '3.16.7'
-      DD_TEST_AGENT_URL: http://testagent:9126
     steps:
       - uses: actions/checkout@v2
-      - uses: actions/setup-node@v3
-        with:
-          cache: yarn
-          node-version: '14'
-          with-yarn: true
+      - uses: ./.github/actions/testagent/start
+      - uses: ./.github/actions/node/setup
       - run: yarn install --ignore-engines
-      - run: yarn services
-      - run: yarn test:plugins
+      - uses: ./.github/actions/node/14
+      - run: yarn test:plugins:ci
+      # - uses: ./.github/actions/node/oldest
+      # - run: yarn test:plugins:ci
+      # - uses: ./.github/actions/node/20
+      # - run: yarn test:plugins:ci
+      - if: always()
+        uses: ./.github/actions/testagent/logs
       - uses: codecov/codecov-action@v2
   aerospike:
     runs-on: ubuntu-latest
