--- a/.github/workflows/plugins.yml
+++ b/.github/workflows/plugins.yml
@@ -61,12 +61,11 @@ jobs:
       - uses: ./.github/actions/testagent/start
       - uses: ./.github/actions/node/setup
       - run: yarn install --ignore-engines
-      # - uses: ./.github/actions/node/14
-      # - run: yarn test:plugins:ci
       - uses: ./.github/actions/node/oldest
       - run: yarn test:plugins:ci
-      # - uses: ./.github/actions/node/20
-      # - run: yarn test:plugins:ci
+      - run: echo "AEROSPIKE_VERSION_RANGE=>=5.8.0" >> "$GITHUB_ENV"
+      - uses: ./.github/actions/node/20
+      - run: yarn test:plugins:ci
       - if: always()
         uses: ./.github/actions/testagent/logs
       - uses: codecov/codecov-action@v2
