--- a/.github/workflows/plugins.yml
+++ b/.github/workflows/plugins.yml
@@ -20,6 +20,27 @@ env:
 
 
 jobs:
+  aerospike-3:
+    runs-on: ubuntu-20.04
+    services:
+      aerospike:
+        image: aerospike:ce-6.4.0.3
+        ports: 
+          - "127.0.0.1:3000-3002:3000-3002"
+    env:
+      PLUGINS: aerospike
+      SERVICES: aerospike
+      AEROSPIKE_VERSION_RANGE: '3.16.7'
+    steps:
+      - uses: actions/checkout@v2
+      - uses: ./.github/actions/testagent/start
+      - uses: ./.github/actions/node/setup
+      - run: yarn install --ignore-engines
+      - uses: ./.github/actions/node/14
+      - run: yarn test:plugins:ci
+      - if: always()
+        uses: ./.github/actions/testagent/logs
+      - uses: codecov/codecov-action@v2
   aerospike:
     runs-on: ubuntu-latest
     services:
