--- a/.github/workflows/plugins.yml
+++ b/.github/workflows/plugins.yml
@@ -30,7 +30,7 @@ jobs:
     env:
       PLUGINS: aerospike
       SERVICES: aerospike
-      AEROSPIKE_VERSION_RANGE: '4.0.0 - 5.7.0'
+      PACKAGE_VERSION_RANGE: '4.0.0 - 5.7.0'
     steps:
       - uses: actions/checkout@v2
       - uses: ./.github/actions/testagent/start
@@ -38,7 +38,7 @@ jobs:
       - run: yarn install --ignore-engines
       - uses: ./.github/actions/node/oldest
       - run: yarn test:plugins:ci
-      - run: echo "AEROSPIKE_VERSION_RANGE=>=5.8.0" >> "$GITHUB_ENV"
+      - run: echo "PACKAGE_VERSION_RANGE=>=5.8.0" >> "$GITHUB_ENV"
       - uses: ./.github/actions/node/20 #currently the latest version of aerospike only supports node 20
       - run: yarn test:plugins:ci
       - if: always()
