--- a/.github/workflows/plugins.yml
+++ b/.github/workflows/plugins.yml
@@ -45,6 +45,10 @@ jobs:
       DD_TEST_AGENT_URL: http://testagent:9126
     steps:
       - uses: actions/checkout@v2
+      - name: Install Yarn
+        run: |
+          curl -o- -L https://yarnpkg.com/install.sh | bash
+          export PATH="$HOME/.yarn/bin:$PATH"
       - uses: actions/setup-node@v3
         with:
           cache: yarn
