--- a/.github/workflows/plugins.yml
+++ b/.github/workflows/plugins.yml
@@ -48,6 +48,10 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: '14'
+      - name: Install Python 3
+        run: |
+          apt-get update
+          apt-get install -y python3 python3-pip
       - name: Install Yarn
         run: |
           npm install -g yarn
