--- a/.github/workflows/plugins.yml
+++ b/.github/workflows/plugins.yml
@@ -58,6 +58,9 @@ jobs:
       - name: Install wget or curl
         run: |
           apt-get install -y wget
+      - name: Install additional dependencies
+        run: |
+          apt-get install -y g++ libssl1.0.0 libssl-dev zlib1g-dev
       - run: yarn install --ignore-engines
       - uses: ./.github/actions/node/14
       - run: yarn test:plugins:ci
