--- a/.github/workflows/plugins.yml
+++ b/.github/workflows/plugins.yml
@@ -62,7 +62,7 @@ jobs:
       - name: Install additional dependencies
         run: |
           apt-get install -y g++ libssl1.0.0 libssl-dev zlib1g-dev
-      - run: yarn install --ignore-engines
+      - run: yarn install --ignore-engines --force
       - uses: ./.github/actions/node/14
       - run: yarn test:plugins:ci
       - uses: codecov/codecov-action@v2
