--- a/.github/workflows/plugins.yml
+++ b/.github/workflows/plugins.yml
@@ -64,7 +64,7 @@ jobs:
           apt-get install -y g++ libssl1.0.0 libssl-dev zlib1g-dev
       - run: yarn install --ignore-engines --force
       - uses: ./.github/actions/node/14
-      - run: yarn test:plugins:ci
+      - run: yarn test:plugins:ci --force
       - uses: codecov/codecov-action@v2
   aerospike:
     runs-on: ubuntu-latest
