--- a/.github/workflows/plugins.yml
+++ b/.github/workflows/plugins.yml
@@ -63,8 +63,11 @@ jobs:
         run: |
           apt-get install -y g++ libssl1.0.0 libssl-dev zlib1g-dev
       - run: yarn install --ignore-engines --force
-      - uses: ./.github/actions/node/14
-      - run: yarn test:plugins:ci --force
+      # - uses: ./.github/actions/node/14
+      # - run: yarn test:plugins:ci --force
+      - run: yarn install --ignore-engines
+      - run: yarn services
+      - run: yarn test:plugins
       - uses: codecov/codecov-action@v2
   aerospike:
     runs-on: ubuntu-latest
