--- a/.github/workflows/plugins.yml
+++ b/.github/workflows/plugins.yml
@@ -49,17 +49,22 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: '14'
-      - name: Install dependencies
+      - name: Install Python 3
         run: |
-          apt-get update && \
-          apt-get install -y \
-            python3 python3-pip \
-            wget \
-            g++ libssl1.0.0 libssl-dev zlib1g-dev && \
+          apt-get update
+          apt-get install -y python3 python3-pip
+      - name: Install Yarn
+        run: |
           npm install -g yarn
-      - run: yarn install --ignore-engines --force
+      - name: Install wget or curl
+        run: |
+          apt-get install -y wget
+      - name: Install additional dependencies
+        run: |
+          apt-get install -y g++ libssl1.0.0 libssl-dev zlib1g-dev
+      - run: yarn install --ignore-engines
       - uses: ./.github/actions/node/14
-      - run: yarn test:plugins:ci --force
+      - run: yarn test:plugins:ci
       - uses: codecov/codecov-action@v2
   aerospike:
     runs-on: ubuntu-latest
