--- a/.github/workflows/plugins.yml
+++ b/.github/workflows/plugins.yml
@@ -53,7 +53,10 @@ jobs:
         run: |
           content=`cat ./package.json | tr '\n' ' '`
           echo "::set-output name=json::$content"
-      - if: fromJson(steps.pkg.outputs.json).version == '3'
+      - name: Check package version
+        if: fromJson(steps.pkg.outputs.json).version == '3'
+        run: |
+          echo "Package version is 3. Proceeding with the next steps."
       - name: Install dependencies
         run: |
           apt-get update && \
