--- a/.github/workflows/plugins.yml
+++ b/.github/workflows/plugins.yml
@@ -49,18 +49,17 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: '14'
-      id: pkg
+      - id: pkg
         run: |
-          content=$(cat ./package.json | tr '\n' ' ')
-          echo "PACKAGE_JSON_CONTENT=$content" >> $GITHUB_ENV
+          content=`cat ./package.json | tr '\n' ' '`
+          echo "::set-output name=json::$content"
       - name: Extract major version
-        id: extract_major_version
         run: |
-          version=$(echo "$PACKAGE_JSON_CONTENT" | grep -o '"version": "[^"]*' | cut -d '"' -f 4)
+          version="${{fromJson(steps.pkg.outputs.json).version}}"
           majorVersion=$(echo "$version" | cut -d '.' -f 1)
-          echo "MAJOR_VERSION=$majorVersion" >> $GITHUB_ENV
+          echo "::set-output name=majorVersion::$majorVersion"
       - name: Check package version
-        if: env.MAJOR_VERSION == '3'
+        if: steps.extract_major_version.outputs.majorVersion == '3'
         run: |
           echo "Package version is 3. Proceeding with the next steps."
       - name: Install dependencies
