--- a/.github/workflows/plugins.yml
+++ b/.github/workflows/plugins.yml
@@ -51,20 +51,20 @@ jobs:
           node-version: '14'
       - id: pkg
         run: |
-          content=`cat ./package.json | tr '\n' ' '`
-          echo "::set-output name=json::$content"
+          content=$(cat ./package.json | tr '\n' ' ')
+          echo "PACKAGE_JSON_CONTENT=$content" >> $GITHUB_ENV
       - id: extract
         run: |
-          version="${{fromJson(steps.pkg.outputs.json).version}}"
+          version=$(echo "$PACKAGE_JSON_CONTENT" | jq -r '.version')
           majorVersion=$(echo "$version" | cut -d '.' -f 1)
-          echo "Major Version: $majorVersion !"
-          echo "::set-output name=majorVersion::$majorVersion"
+          echo "Major Version: $majorVersion"
+          echo "MAJOR_VERSION=$majorVersion" >> $GITHUB_ENV
       - name: Check package version
-        if: steps.extract.outputs.majorVersion == '3'
+        if: env.MAJOR_VERSION == '3'
         run: |
           echo "Package version is 3. Proceeding with the next steps."
       - name: Install dependencies
-        if: steps.extract.outputs.majorVersion == '3'
+        if: env.MAJOR_VERSION == '3'
         run: |
           apt-get update && \
           apt-get install -y \
@@ -72,13 +72,13 @@ jobs:
             wget \
             g++ libssl1.0.0 libssl-dev zlib1g-dev && \
           npm install -g yarn
-      - if: steps.extract.outputs.majorVersion == '3'
+      - if: env.MAJOR_VERSION == '3'
         run: yarn install --ignore-engines
-      - if: steps.extract.outputs.majorVersion == '3'
+      - if: env.MAJOR_VERSION == '3'
         uses: ./.github/actions/node/14
-      - if: steps.extract.outputs.majorVersion == '3'
+      - if: env.MAJOR_VERSION == '3'
         run: yarn test:plugins:ci
-      - if: steps.extract.outputs.majorVersion == '3'
+      - if: env.MAJOR_VERSION == '3'
         uses: codecov/codecov-action@v2
   aerospike:
     runs-on: ubuntu-latest
