--- a/.github/workflows/plugins.yml
+++ b/.github/workflows/plugins.yml
@@ -55,7 +55,7 @@ jobs:
           echo "PACKAGE_JSON_CONTENT=$content" >> $GITHUB_ENV
       - id: extract
         run: |
-          version=$(echo "$PACKAGE_JSON_CONTENT" | jq -r '.version')
+          version="${{fromJson(steps.pkg.outputs.json).version}}"
           majorVersion=$(echo "$version" | cut -d '.' -f 1)
           echo "Major Version: $majorVersion"
           echo "MAJOR_VERSION=$majorVersion" >> $GITHUB_ENV
