--- a/.github/workflows/plugins.yml
+++ b/.github/workflows/plugins.yml
@@ -49,13 +49,10 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: '14'
-      - id: pkg
-        run: |
-          content=`cat ./package.json | tr '\n' ' '`
-          echo "::set-output name=json::$content"
       - id: extract
         run: |
-          version="${{fromJson(steps.pkg.outputs.json).version}}"
+          content=`cat ./package.json | tr '\n' ' '`
+          version="${{fromJson(content).version}}"
           majorVersion=$(echo "$version" | cut -d '.' -f 1)
           echo "Major Version: $majorVersion"
           echo "MAJOR_VERSION=$majorVersion" >> $GITHUB_ENV
