--- a/.github/workflows/plugins.yml
+++ b/.github/workflows/plugins.yml
@@ -52,7 +52,7 @@ jobs:
       - id: extract
         run: |
           content=`cat ./package.json | tr '\n' ' '`
-          version="${{fromJson(content).version}}"
+          version="${{fromJson($content).version}}"
           majorVersion=$(echo "$version" | cut -d '.' -f 1)
           echo "Major Version: $majorVersion"
           echo "MAJOR_VERSION=$majorVersion" >> $GITHUB_ENV
