--- a/.github/workflows/plugins.yml
+++ b/.github/workflows/plugins.yml
@@ -20,6 +20,66 @@ env:
 
 
 jobs:
+  aerospike-3:
+    runs-on: ubuntu-latest
+    container:
+      image: ubuntu:18.04
+    services:
+      aerospike:
+        image: aerospike:ce-6.4.0.3
+        ports:
+          - 3000:3000
+      testagent:
+        image: ghcr.io/datadog/dd-apm-test-agent/ddapm-test-agent:latest
+        env:
+          LOG_LEVEL: DEBUG
+          TRACE_LANGUAGE: javascript
+          DISABLED_CHECKS: trace_content_length
+          PORT: 9126
+        ports:
+          - 9126:9126
+    env:
+      PLUGINS: aerospike
+      SERVICES: aerospike
+      PACKAGE_VERSION_RANGE: '3.16.2 - 3.16.7'
+      DD_TEST_AGENT_URL: http://testagent:9126
+      AEROSPIKE_HOST_ADDRESS: aerospike
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-node@v3
+        with:
+          node-version: '14'
+      - id: pkg
+        run: |
+          content=`cat ./package.json | tr '\n' ' '`
+          echo "::set-output name=json::$content"
+      - id: extract
+        run: |
+          version="${{fromJson(steps.pkg.outputs.json).version}}"
+          majorVersion=$(echo "$version" | cut -d '.' -f 1)
+          echo "Major Version: $majorVersion"
+          echo "MAJOR_VERSION=$majorVersion" >> $GITHUB_ENV
+      - name: Check package version
+        if: env.MAJOR_VERSION == '3'
+        run: |
+          echo "Package version is 3. Proceeding with the next steps."
+      - name: Install dependencies
+        if: env.MAJOR_VERSION == '3'
+        run: |
+          apt-get update && \
+          apt-get install -y \
+            python3 python3-pip \
+            wget \
+            g++ libssl1.0.0 libssl-dev zlib1g-dev && \
+          npm install -g yarn
+      - if: env.MAJOR_VERSION == '3'
+        run: yarn install --ignore-engines
+      - if: env.MAJOR_VERSION == '3'
+        uses: ./.github/actions/node/14
+      - if: env.MAJOR_VERSION == '3'
+        run: yarn test:plugins:ci
+      - if: env.MAJOR_VERSION == '3'
+        uses: codecov/codecov-action@v2
   aerospike:
     runs-on: ubuntu-latest
     services:
