--- a/.github/workflows/plugins.yml
+++ b/.github/workflows/plugins.yml
@@ -121,9 +121,9 @@ jobs:
       - uses: ./.github/actions/node/setup
       - run: yarn install
       - uses: ./.github/actions/node/oldest
-      - run: yarn test:plugins
+      - run: yarn test:plugins:ci
       - uses: ./.github/actions/node/latest
-      - run: yarn test:plugins
+      - run: yarn test:plugins:ci
       - if: always()
         uses: ./.github/actions/testagent/logs
       - uses: codecov/codecov-action@v2
